[gd_scene load_steps=28 format=3 uid="uid://cvn3qwq0tl42h"]

[ext_resource type="Script" uid="uid://g4yn8xxfpyai" path="res://scripts/enemies/enemy.gd" id="1_5f8g2"]
[ext_resource type="Texture2D" uid="uid://dve0hcsf1db83" path="res://assets/images/enemies/Enemy52.png" id="1_6xk8f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5dx81"]
radius = 35.1283

[sub_resource type="Animation" id="Animation_reset"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_6xk8f")]
}

[sub_resource type="Animation" id="Animation_chase"]
resource_name = "chase"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_6xk8f")]
}

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_6xk8f")]
}

[sub_resource type="Animation" id="Animation_knockback"]
resource_name = "knockback"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_6xk8f")]
}

[sub_resource type="Animation" id="Animation_patrol"]
resource_name = "patrol"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_6xk8f")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_enemy01"]
_data = {
&"RESET": SubResource("Animation_reset"),
&"chase": SubResource("Animation_chase"),
&"idle": SubResource("Animation_idle"),
&"knockback": SubResource("Animation_knockback"),
&"patrol": SubResource("Animation_patrol")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_chase"]
animation = &"chase"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_idle"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_knockback"]
animation = &"knockback"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_patrol"]
animation = &"patrol"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_start_idle"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_idle_patrol"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_patrol_idle"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_idle_chase"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_chase_idle"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_patrol_chase"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_chase_patrol"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_idle_knockback"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_patrol_knockback"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_chase_knockback"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_knockback_idle"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_enemy01"]
states/CHASE/node = SubResource("AnimationNodeAnimation_chase")
states/CHASE/position = Vector2(600, 150)
states/IDLE/node = SubResource("AnimationNodeAnimation_idle")
states/IDLE/position = Vector2(400, 150)
states/KNOCKBACK/node = SubResource("AnimationNodeAnimation_knockback")
states/KNOCKBACK/position = Vector2(400, 300)
states/PATROL/node = SubResource("AnimationNodeAnimation_patrol")
states/PATROL/position = Vector2(600, 300)
states/Start/position = Vector2(200, 150)
transitions = ["Start", "IDLE", SubResource("AnimationNodeStateMachineTransition_start_idle"), "IDLE", "PATROL", SubResource("AnimationNodeStateMachineTransition_idle_patrol"), "PATROL", "IDLE", SubResource("AnimationNodeStateMachineTransition_patrol_idle"), "IDLE", "CHASE", SubResource("AnimationNodeStateMachineTransition_idle_chase"), "CHASE", "IDLE", SubResource("AnimationNodeStateMachineTransition_chase_idle"), "PATROL", "CHASE", SubResource("AnimationNodeStateMachineTransition_patrol_chase"), "CHASE", "PATROL", SubResource("AnimationNodeStateMachineTransition_chase_patrol"), "IDLE", "KNOCKBACK", SubResource("AnimationNodeStateMachineTransition_idle_knockback"), "PATROL", "KNOCKBACK", SubResource("AnimationNodeStateMachineTransition_patrol_knockback"), "CHASE", "KNOCKBACK", SubResource("AnimationNodeStateMachineTransition_chase_knockback"), "KNOCKBACK", "IDLE", SubResource("AnimationNodeStateMachineTransition_knockback_idle")]
graph_offset = Vector2(63.16, 60.46)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uavjf"]
radius = 48.3333
height = 266.667

[sub_resource type="CircleShape2D" id="CircleShape2D_uavjf"]
radius = 58.3333

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_5f8g2")
enemy_id = "01"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_6xk8f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-4, 9)
shape = SubResource("CircleShape2D_5dx81")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_enemy01")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_enemy01")
anim_player = NodePath("../AnimationPlayer")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(-4, 9)
collision_layer = 64
collision_mask = 0

[node name="HurtboxCollision" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-4.3201e-12, -40)
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_uavjf")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-4, 9)
collision_layer = 16
collision_mask = 4

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(0.6, 0.6)
shape = SubResource("CircleShape2D_uavjf")
debug_color = Color(0.858824, 0.305882, 0.501961, 0.419608)

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(-4, 9)
collision_layer = 0
collision_mask = 4

[node name="VisionShape" type="Polygon2D" parent="DetectionArea"]
color = Color(0.309804, 0.65098, 0.835294, 0.2)
polygon = PackedVector2Array(0, 0, 450, -150, 463, -134, 475, -118, 485, -101, 494, -84, 499, -67, 503, -50, 506, -34, 508, -17, 509, 0, 508, 17, 506, 34, 503, 50, 499, 67, 494, 84, 485, 101, 475, 118, 463, 134, 450, 150)

[node name="DetectionCollision" type="CollisionPolygon2D" parent="DetectionArea"]
visible = false
polygon = PackedVector2Array(0, 0, 450, -150, 463, -134, 475, -118, 485, -101, 494, -84, 499, -67, 503, -50, 506, -34, 508, -17, 509, 0, 508, 17, 506, 34, 503, 50, 499, 67, 494, 84, 485, 101, 475, 118, 463, 134, 450, 150)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["traps"]]
position = Vector2(-4, 9)
scale = Vector2(0.585714, 0.6)
rect = Rect2(-70, -70, 140, 140)
